Version 1.19.2 *
==================
- fixed usage of ISO-8859-1 for license file paths on Windows
- fixed unsorted files in project subfolder
- fixed closing Connect editor and Studio on saving connect file
- fixed Studio version information on macOS (Info.plist)
- improved plain text views for Connect and Solver Option editor by using a fixed font
- improved license file line separator and trailing whitespaces

Version 1.19.1
==================
- added allow to delete files from the Project Explorer
- added system and version information to the log (created via `--log`)
- added additional logging for license installation
- added settings option to switch system logging on/off
- added information about disabled check for update at startup
- fixed invalid error mark when the LST file contains wrong position information
- fixed initialization and validation of options created from Connect schema in Connect Editor
- fixed adding only required options in Connect Editor
- fixed saving file in Connect Editor after an edit finished with a mouse click
- fixed crash and blocking on macOS after interrupting a GAMS run
- improved license text for time limited licenses
- improved create a system log file by default and new parameter "--no-log" to deactivate it
- reverted "improved group search results by file, i.e. a tree view is used instead of a table"
- upgraded from Qt 6.7.2 to Qt 6.7.3

Version 1.19.0
==================
- added background color for syntax highlighting
- added "Close and delete project" action to Project Explorer context menu
- added virtual project, i.e. only create a gsp file on a certain number of files or if a main file is part of the project
- added zoom support for model dialog
- added Reference File (RF) creation to `Run with GDX creation`
- added color indicator for non-existing MIRO path
- added single project mode to focus one project only
- added licensed GAMS solvers to license text and dropped solver matrix