@@ -36,7 +36,7 @@
     <number>6</number>
    </property>
    <property name="sizeConstraint">
-    <enum>QLayout::SetNoConstraint</enum>
+    <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
    </property>
    <property name="leftMargin">
     <number>9</number>
@@ -53,7 +53,7 @@
    <item>
     <layout class="QVBoxLayout" name="vl_parent">
      <property name="sizeConstraint">
-      <enum>QLayout::SetNoConstraint</enum>
+      <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
      </property>
      <property name="topMargin">
       <number>0</number>
@@ -67,7 +67,7 @@
         <number>10</number>
        </property>
        <property name="sizeConstraint">
-        <enum>QLayout::SetNoConstraint</enum>
+        <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
        </property>
        <property name="leftMargin">
         <number>8</number>
@@ -95,20 +95,20 @@
          <item>
           <widget class="QLabel" name="label_lastProjects">
            <property name="contextMenuPolicy">
-            <enum>Qt::NoContextMenu</enum>
+            <enum>Qt::ContextMenuPolicy::NoContextMenu</enum>
            </property>
            <property name="text">
             <string>&lt;h2&gt;Last Projects&lt;/h2&gt;</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignmentFlag::AlignCenter</set>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_5">
            <property name="orientation">
-            <enum>Qt::Horizontal</enum>
+            <enum>Qt::Orientation::Horizontal</enum>
            </property>
           </widget>
          </item>
@@ -121,10 +121,10 @@
             </size>
            </property>
            <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
+            <enum>QFrame::Shape::NoFrame</enum>
            </property>
            <property name="sizeAdjustPolicy">
-            <enum>QAbstractScrollArea::AdjustToContents</enum>
+            <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContents</enum>
            </property>
            <property name="widgetResizable">
             <bool>true</bool>
@@ -134,13 +134,13 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>324</width>
-              <height>475</height>
+              <width>321</width>
+              <height>474</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_2a">
              <property name="sizeConstraint">
-              <enum>QLayout::SetNoConstraint</enum>
+              <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
              </property>
              <property name="leftMargin">
               <number>0</number>
@@ -160,7 +160,7 @@
              <item>
               <spacer name="spacer_history_bot1">
                <property name="orientation">
-                <enum>Qt::Vertical</enum>
+                <enum>Qt::Orientation::Vertical</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
@@ -179,7 +179,7 @@
        <item>
         <layout class="QVBoxLayout" name="vl_history">
          <property name="sizeConstraint">
-          <enum>QLayout::SetDefaultConstraint</enum>
+          <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
          </property>
          <property name="rightMargin">
           <number>0</number>
@@ -187,20 +187,20 @@
          <item>
           <widget class="QLabel" name="label_lastFiles">
            <property name="contextMenuPolicy">
-            <enum>Qt::NoContextMenu</enum>
+            <enum>Qt::ContextMenuPolicy::NoContextMenu</enum>
            </property>
            <property name="text">
             <string>&lt;h2&gt;Last Files&lt;/h2&gt;</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignmentFlag::AlignCenter</set>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_3">
            <property name="orientation">
-            <enum>Qt::Horizontal</enum>
+            <enum>Qt::Orientation::Horizontal</enum>
            </property>
           </widget>
          </item>
@@ -213,10 +213,10 @@
             </size>
            </property>
            <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
+            <enum>QFrame::Shape::NoFrame</enum>
            </property>
            <property name="sizeAdjustPolicy">
-            <enum>QAbstractScrollArea::AdjustToContents</enum>
+            <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContents</enum>
            </property>
            <property name="widgetResizable">
             <bool>true</bool>
@@ -226,13 +226,13 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>324</width>
-              <height>475</height>
+              <width>320</width>
+              <height>474</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_2">
              <property name="sizeConstraint">
-              <enum>QLayout::SetNoConstraint</enum>
+              <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
              </property>
              <property name="leftMargin">
               <number>0</number>
@@ -252,7 +252,7 @@
              <item>
               <spacer name="spacer_history_bot">
                <property name="orientation">
-                <enum>Qt::Vertical</enum>
+                <enum>Qt::Orientation::Vertical</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
@@ -271,43 +271,51 @@
        <item>
         <layout class="QVBoxLayout" name="vl_gettingstarted">
          <property name="sizeConstraint">
-          <enum>QLayout::SetDefaultConstraint</enum>
+          <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
          </property>
          <item>
           <widget class="QLabel" name="label_gettingstarted">
            <property name="contextMenuPolicy">
-            <enum>Qt::NoContextMenu</enum>
+            <enum>Qt::ContextMenuPolicy::NoContextMenu</enum>
            </property>
            <property name="text">
             <string>&lt;h2&gt;Getting Started&lt;/h2&gt;</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignmentFlag::AlignCenter</set>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_2">
            <property name="orientation">
-            <enum>Qt::Horizontal</enum>
+            <enum>Qt::Orientation::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QScrollArea" name="sa_gettingStarted">
            <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
+            <enum>QFrame::Shape::NoFrame</enum>
            </property>
            <property name="horizontalScrollBarPolicy">
-            <enum>Qt::ScrollBarAlwaysOff</enum>
+            <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
            </property>
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
            <widget class="QWidget" name="scrollAreaWidgetContents_2">
+            <property name="geometry">
+             <rect>
+              <x>0</x>
+              <y>0</y>
+              <width>321</width>
+              <height>474</height>
+             </rect>
+            </property>
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <property name="sizeConstraint">
-              <enum>QLayout::SetNoConstraint</enum>
+              <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
              </property>
              <property name="leftMargin">
               <number>0</number>
@@ -324,7 +332,7 @@
              <item>
               <layout class="QVBoxLayout" name="vl_examplelist">
                <property name="sizeConstraint">
-                <enum>QLayout::SetNoConstraint</enum>
+                <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
                </property>
                <property name="bottomMargin">
                 <number>0</number>
@@ -332,16 +340,16 @@
                <item>
                 <widget class="gams::studio::WpLabel" name="label_newfile">
                  <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                  <enum>QFrame::Shape::StyledPanel</enum>
                  </property>
                  <property name="frameShadow">
-                  <enum>QFrame::Plain</enum>
+                  <enum>QFrame::Shadow::Plain</enum>
                  </property>
                  <property name="text">
                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: top;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Create New File&lt;/span&gt;&lt;br&gt;&lt;small&gt;Creates a new and empty .gms file.&lt;/small&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="textFormat">
-                  <enum>Qt::AutoText</enum>
+                  <enum>Qt::TextFormat::AutoText</enum>
                  </property>
                  <property name="margin">
                   <number>4</number>
@@ -357,10 +365,10 @@
                   <bool>true</bool>
                  </property>
                  <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                  <enum>QFrame::Shape::StyledPanel</enum>
                  </property>
                  <property name="frameShadow">
-                  <enum>QFrame::Plain</enum>
+                  <enum>QFrame::Shadow::Plain</enum>
                  </property>
                  <property name="text">
                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: top;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Browse GAMS Libraries&lt;/span&gt;&lt;br/&gt;&lt;small&gt;The GAMS libraries contain an exhaustive list of GAMS examples ranging from simple tutorials to difficult real life problems.&lt;/small&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -379,7 +387,7 @@
                <item>
                 <widget class="Line" name="line">
                  <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
+                  <enum>Qt::Orientation::Horizontal</enum>
                  </property>
                 </widget>
                </item>
@@ -392,10 +400,10 @@
                   </sizepolicy>
                  </property>
                  <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                  <enum>QFrame::Shape::StyledPanel</enum>
                  </property>
                  <property name="frameShadow">
-                  <enum>QFrame::Plain</enum>
+                  <enum>QFrame::Shadow::Plain</enum>
                  </property>
                  <property name="text">
                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: top;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Transport Example&lt;/span&gt;&lt;br/&gt;&lt;small&gt;A simple GAMS example to find a cost efficient solution for a shipping problem featuring demand and supply.&lt;/small&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -414,7 +422,7 @@
                <item>
                 <widget class="Line" name="line_8">
                  <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
+                  <enum>Qt::Orientation::Horizontal</enum>
                  </property>
                 </widget>
                </item>
@@ -429,7 +437,7 @@
                   <bool>true</bool>
                  </property>
                  <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                  <enum>QFrame::Shape::StyledPanel</enum>
                  </property>
                  <property name="text">
                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: top;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;GAMS Studio Documentation&lt;/span&gt;&lt;br/&gt;&lt;small&gt;Opens integrated help showing the documentation of GAMS Studio.&lt;/small&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -459,7 +467,7 @@
                   <bool>true</bool>
                  </property>
                  <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                  <enum>QFrame::Shape::StyledPanel</enum>
                  </property>
                  <property name="text">
                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: top;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600; &quot;&gt;GAMS Tutorial&lt;/span&gt;&lt;br&gt;&lt;small&gt;General tutorial about the GAMS language.&lt;/small&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -468,7 +476,7 @@
                   <bool>false</bool>
                  </property>
                  <property name="alignment">
-                  <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                  <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
                  </property>
                  <property name="wordWrap">
                   <bool>true</bool>
@@ -487,10 +495,10 @@
                <item>
                 <spacer name="verticalSpacer_3">
                  <property name="orientation">
-                  <enum>Qt::Vertical</enum>
+                  <enum>Qt::Orientation::Vertical</enum>
                  </property>
                  <property name="sizeType">
-                  <enum>QSizePolicy::MinimumExpanding</enum>
+                  <enum>QSizePolicy::Policy::MinimumExpanding</enum>
                  </property>
                  <property name="sizeHint" stdset="0">
                   <size>
@@ -511,7 +519,7 @@
        <item>
         <layout class="QVBoxLayout" name="vl_links">
          <property name="sizeConstraint">
-          <enum>QLayout::SetDefaultConstraint</enum>
+          <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
          </property>
          <item>
           <widget class="QLabel" name="label_discovergams">
@@ -522,20 +530,20 @@
             </sizepolicy>
            </property>
            <property name="contextMenuPolicy">
-            <enum>Qt::NoContextMenu</enum>
+            <enum>Qt::ContextMenuPolicy::NoContextMenu</enum>
            </property>
            <property name="text">
             <string>&lt;h2&gt;Further Help&lt;/h2&gt;</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignmentFlag::AlignCenter</set>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_4">
            <property name="orientation">
-            <enum>Qt::Horizontal</enum>
+            <enum>Qt::Orientation::Horizontal</enum>
            </property>
           </widget>
          </item>
@@ -544,7 +552,7 @@
            <item>
             <widget class="gams::studio::WpLabel" name="label_whatsnew">
              <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
+              <enum>QFrame::Shape::StyledPanel</enum>
              </property>
              <property name="text">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: middle;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;What's new in Studio?&lt;/span&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -568,7 +576,7 @@
               <bool>true</bool>
              </property>
              <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
+              <enum>QFrame::Shape::StyledPanel</enum>
              </property>
              <property name="text">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: middle;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;GAMS Release Notes&lt;/span&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -587,17 +595,17 @@
            <item>
             <widget class="Line" name="line_6">
              <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+              <enum>Qt::Orientation::Horizontal</enum>
              </property>
             </widget>
            </item>
            <item>
             <widget class="gams::studio::WpLabel" name="label_gamsworld">
              <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
+              <enum>QFrame::Shape::StyledPanel</enum>
              </property>
              <property name="frameShadow">
-              <enum>QFrame::Plain</enum>
+              <enum>QFrame::Shadow::Plain</enum>
              </property>
              <property name="text">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: middle;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;GAMS World Forum&lt;/span&gt;&lt;/tr&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -606,7 +614,7 @@
               <number>4</number>
              </property>
              <property name="link" stdset="0">
-              <string>https://forum.gamsworld.org/</string>
+              <string>https://forum.gams.com/</string>
              </property>
             </widget>
            </item>
@@ -619,10 +627,10 @@
               </size>
              </property>
              <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
+              <enum>QFrame::Shape::StyledPanel</enum>
              </property>
              <property name="frameShadow">
-              <enum>QFrame::Plain</enum>
+              <enum>QFrame::Shadow::Plain</enum>
              </property>
              <property name="text">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;table style=&quot;vertical-align: middle;&quot;&gt;&lt;tr&gt;&lt;td&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Contact GAMS&lt;/span&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -643,10 +651,10 @@
          <item>
           <spacer name="spacer_discover_bot">
            <property name="orientation">
-            <enum>Qt::Vertical</enum>
+            <enum>Qt::Orientation::Vertical</enum>
            </property>
            <property name="sizeType">
-            <enum>QSizePolicy::MinimumExpanding</enum>
+            <enum>QSizePolicy::Policy::MinimumExpanding</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
